Sonar fix